src/objects/ACED_Delivery_Indication_Actuals__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Value__c</fullName>
        <inlineHelpText>This is a helptext for Actual Value</inlineHelpText>
        <label>Actual Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delivery_Attribute_Upsert__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is a helptext for Delivery Attribute Upsert</inlineHelpText>
        <label>Delivery Attribute Upsert</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Delivery_Indication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is a helptext for Delivery Indication</inlineHelpText>
        <label>Delivery Indication</label>
        <referenceTo>ACED_Delivery_Indication__c</referenceTo>
        <relationshipLabel>Delivery Indication Actuals</relationshipLabel>
        <relationshipName>Delivery_Indication_Actuals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Effort_Value__c</fullName>
        <inlineHelpText>This is a helptext for Effort Value</inlineHelpText>
        <label>Effort Value</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_Start_Date__c</fullName>
        <formula>CASE( TEXT( Month__c ) , 
&quot;January&quot;, DATE( YEAR( TODAY() ) , 01, 01), 
&quot;February&quot;, DATE( YEAR( TODAY() ) , 02, 01), 
&quot;March&quot;, DATE( YEAR( TODAY() ) , 03, 01), 
&quot;April&quot;, DATE( YEAR( TODAY() ) , 04, 01), 
&quot;May&quot;, DATE( YEAR( TODAY() ) , 05, 01), 
&quot;June&quot;,DATE( YEAR( TODAY() ) , 06, 01), 
&quot;July&quot;, DATE( YEAR( TODAY() ) , 07, 01), 
&quot;August&quot;, DATE( YEAR( TODAY() ) , 08, 01), 
&quot;September&quot;, DATE( YEAR( TODAY() ) , 09, 01), 
&quot;October&quot;, DATE( YEAR( TODAY() ) , 10, 01), 
&quot;November&quot;, DATE( YEAR( TODAY() ) , 11, 01), 
&quot;December&quot;, DATE( YEAR( TODAY() ) , 12, 01), 
Null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a helptext for Month Start Date</inlineHelpText>
        <label>Month Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <inlineHelpText>This is a helptext for Month</inlineHelpText>
        <label>Month</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Delivery Indication Actual</label>
    <nameField>
        <displayFormat>DIA-{000000}</displayFormat>
        <label>Delivery Indication Actuals Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery Indication Actuals</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>